# ai-doc-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_doc_generator/: config.py  main.py
ai_doc_generator/analysis/: analyzer.py
ai_doc_generator/fs/: reader.py  scanner.py
ai_doc_generator/guide/: generator.py
ai_doc_generator/llm/: base.py  openai_local.py
ai_doc_generator/prompts/: builder.py
ai_doc_generator/storage/: findings.py  summaries.py
